# ARMMetal

./: .clang-format  .gitignore  CMakeLists.txt  boot.S  build.sh  compile_commands.json  link.ld  main.c  mem  run.sh  test.sh
Boot/: CMakeLists.txt  boot.S  link.ld
Kernel/: CMakeLists.txt  Kmalloc.cpp  Kmalloc.h  Main.cpp  Referable.h  ReferablePtr.h  ReferablePtrForward.h  ReferableUtils.h  Slab.cpp  Slab.h  Traits.h  Uart.cpp  Uart.h  UniquePtr.h  UniquePtrForward.h  WeakPtr.h  WeaklyReferable.h  link.ld  main.c  main.cpp  uart.c
LibC/: CMakeLists.txt  assert.h  ctype.h  errno.h  math.cpp  math.h
Test/: CMakeLists.txt  Main.cpp
