set(CMAKE_SYSTEM_NAME CMAKE_HOST_SYSTEM_NAME)
set(CMAKE_SYSTEM_PROCESSOR CMAKE_HOST_SYSTEM_PROCESSOR)

set(CMAKE_TRY_COMPILE_TARGET_TYPE EXECUTABLE)

set(TOOLCHAIN_PREFIX /usr/lib/llvm-14/bin/)

set(CMAKE_C_COMPILER ${TOOLCHAIN_PREFIX}clang++)
set(CMAKE_CXX_COMPILER ${TOOLCHAIN_PREFIX}clang++)
set(CMAKE_LINKER ${TOOLCHAIN_PREFIX}llvm-link)

add_executable(Test Main.cpp)
